--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Hi-Cmis</title>
     <link rel="shortcut icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <script src="./js/cleaner.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
@@ -37,5 +38,6 @@
         </div>
     </div>
 </div>
+<footer>&copy;&nbsp;Copyright&nbsp;2017&nbsp;Hi-Cmis.Powered&nbsp;by&nbsp;数据库库库.</footer>
 </body>
 </html>
