add power judge to ban illegal operation

--- a/adminSendNotice.html
+++ b/adminSendNotice.html
@@ -76,6 +76,7 @@
 <script src="./js/updateInfo.js"></script>
 <script src="./js/sendNotice.js"></script>
 <script>
+    judgeAdminPower();
 //JavaScript代码区域
 layui.use('element', function(){
   var element = layui.element;
