--- a/adminSetting.html
+++ b/adminSetting.html
@@ -78,6 +78,7 @@
 <script src="./js/updateInfo.js"></script>
 <script src="./js/layui/layui.js"></script>
 <script>
+    judgeAdminPower();
 //JavaScript代码区域
 layui.use('element', function(){
   var element = layui.element;
