--- a/adminViewNotice.html
+++ b/adminViewNotice.html
@@ -77,6 +77,7 @@
 <script src="./js/showNotices.js"></script>
 <script src="./js/layui/layui.js"></script>
 <script>
+    judgeAdminPower();
 //JavaScript代码区域
 layui.use('element', function(){
   var element = layui.element;
