--- a/stuIndex.html
+++ b/stuIndex.html
@@ -76,6 +76,7 @@
 <script src="./js/updateInfo.js"></script>
 <script src="./js/layui/layui.js"></script>
 <script>
+  judgeUserPower();
   getNumbers();
 //JavaScript代码区域
 layui.use('element', function(){
