--- a/stuViewNotice.html
+++ b/stuViewNotice.html
@@ -74,6 +74,7 @@
 <script src="./js/showNotices.js"></script>
 <script src="./js/layui/layui.js"></script>
 <script>
+  judgeUserPower();
 //JavaScript代码区域
 layui.use('element', function(){
   var element = layui.element;
