add login info judge module

--- a/studentItems.html
+++ b/studentItems.html
@@ -15,9 +15,10 @@
 	<table id="stuNumbers"></table>
 	<button class="layui-btn" onclick="getCheckData()">获取选中行数据</button>
 </div>
+<script src="./js/updateInfo.js"></script>
 <script src="./js/layui/layui.js"></script>
 <script>
-judgeUserPower();
+judgeAdminPower();
 getNumbers();
 initList();
 //JavaScript代码区域
