--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
     <script src="./js/cleaner.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/layer/layer.js"></script>
     <script src="./js/loginInfo.js"></script>
 	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./css/login.css">
