--- a/stuIndex.html
+++ b/stuIndex.html
@@ -25,7 +25,7 @@
           <dd><a href="./stuSetting.html">安全设置</a></dd>
         </dl>
       </li>
-      <li class="layui-nav-item"><a href="./login.html">退出</a></li>
+      <li class="layui-nav-item"><a href="./index.html">退出</a></li>
     </ul>
   </div>
   <div class="layui-side layui-bg-black">
