--- a/studentItems.html
+++ b/studentItems.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hi-Cmis</title>
+  <title>Hi-Cmis</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="">
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
