--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <form class="form-horizontal">
                 <span class="heading">Hi-Cmis</span>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="stuId" placeholder="学号">
+                    <input type="text" class="form-control" id="stuId" placeholder="学号" onkeydown=KeyDown()>
                     <i class="fa fa-user"></i>
                 </div>
                 <div class="form-group help">
-                    <input type="password" class="form-control" id="stuPwd" placeholder="密码">
+                    <input type="password" class="form-control" id="stuPwd" placeholder="密码" onkeydown=KeyDown()>
                     <i class="fa fa-lock"></i>
                     <a href="#" class="fa fa-question-circle"></a>
                 </div>
